[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/GameScene.gd" type="Script" id=1]
[ext_resource path="res://Assets/Font/FredokaOne.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Font/Ubuntu-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]
size = 45
use_mipmaps = true
use_filter = true
extra_spacing_space = 15
font_data = ExtResource( 3 )

[node name="MainScene" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1840.0
margin_bottom = 79.0
custom_fonts/font = ExtResource( 2 )
text = "Game Data"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
margin_top = 83.0
margin_right = 1840.0
margin_bottom = 733.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
breakpoint_gutter = true

[node name="SaveButton" type="Button" parent="VBoxContainer"]
margin_top = 737.0
margin_right = 1840.0
margin_bottom = 822.0
custom_fonts/font = ExtResource( 2 )
text = "Save Data"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="Button" parent="VBoxContainer"]
margin_top = 826.0
margin_right = 1840.0
margin_bottom = 911.0
custom_fonts/font = ExtResource( 2 )
text = "Load Data"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="VBoxContainer"]
margin_top = 915.0
margin_right = 1840.0
margin_bottom = 1000.0
custom_fonts/font = ExtResource( 2 )
text = "Reset Data"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ResetButton" to="." method="_on_ResetButton_pressed"]
